--- a/msvc/OpenGLSandbox.vcxproj.filters
+++ b/msvc/OpenGLSandbox.vcxproj.filters
@@ -16,6 +16,9 @@
     <ClCompile Include="..\src\entities\GLLineCollection.cpp">
       <Filter>entities</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\entities\ThickLineStrip.cpp">
+      <Filter>entities</Filter>
+    </ClCompile>
     <ClCompile Include="..\src\thickLineMesh.cpp" />
     <ClCompile Include="..\src\lineMesh.cpp" />
   </ItemGroup>
@@ -32,6 +35,9 @@
       <Filter>entities</Filter>
     </ClInclude>
     <ClInclude Include="..\src\entities\GLLineCollection.h">
+      <Filter>entities</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\entities\ThickLineStrip.h">
       <Filter>entities</Filter>
     </ClInclude>
     <ClInclude Include="..\src\thickLineMesh.h" />
@@ -59,6 +65,9 @@
       <Filter>shaders</Filter>
     </None>
     <None Include="..\src\shaders\passthroughVS.glsl">
+      <Filter>shaders</Filter>
+    </None>
+    <None Include="..\src\shaders\lineStripsVS.glsl">
       <Filter>shaders</Filter>
     </None>
   </ItemGroup>
